--- a/galaxy/openrct2/PKGBUILD
+++ b/galaxy/openrct2/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Graham Edgecombe <graham@grahamedgecombe.com>
 
 pkgname=openrct2
-pkgver=0.4.22
-pkgrel=1
+pkgver=0.4.23
+pkgrel=0
 pkgdesc='Open source re-implementation of Roller Coaster Tycoon 2 (requires full copy of the game)'
 arch=('x86_64')
 url='https://openrct2.io'
@@ -20,7 +20,7 @@ optdepends=('zenity: System dialog box support (GNOME/GTK)'
             'libpulse: PulseAudio audio driver')
 source=($pkgname-$pkgver.tar.gz::https://github.com/OpenRCT2/OpenRCT2/archive/v$pkgver.tar.gz
         googletest-fix-maybe-uninitialized.patch)
-sha256sums=('a626c2ceea6a20a5edb7908c045de52629f5b48be40c05c29fbf42796df94344'
+sha256sums=('1eac23e999aab1280da88a052d66f928c9d66ec4e7e6c844d628b1b3744f9d18'
             '6c4becab25ec1824883a4c1946d4aa4b45534b9a6199b782db7879b78178ff84')
 
 prepare() {
@@ -38,7 +38,7 @@ build() {
   export CXXFLAGS+=" -Wno-error=maybe-uninitialized  -Wno-error=restrict  -Wno-error=null-dereference"
   cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr \
     -DSTATIC=off -DWITH_TESTS=on -DCMAKE_INSTALL_LIBDIR=/usr/lib ..
-  make all g2
+  make all graphics
 }
 
 check() {
