--- a/world/python-aiohttp/.artixlinux/pkgbase.yaml
+++ b/world/python-aiohttp/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -25,14 +25,13 @@ repos:
     packages: []
     debug: []
   world-gremlins:
-    version: 3.12.9-1
-    packages:
-      - python-aiohttp-3.12.9-1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world:
-    version: 3.12.11-1
+    version: 3.12.11-1.1
     packages:
-      - python-aiohttp-3.12.11-1-x86_64.pkg.tar.zst
+      - python-aiohttp-3.12.11-1.1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
