--- a/world/hiredis/.artixlinux/pkgbase.yaml
+++ b/world/hiredis/.artixlinux/pkgbase.yaml
@@ -1,56 +1,60 @@
 ---
-pkgbase:
-  name: hiredis
-  version: 1.2.0-3
-  arch:
-    - x86_64
-  pkgname:
-    - hiredis
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
-    version: 1.2.0-3
-    packages:
-      - hiredis-1.2.0-3-x86_64.pkg.tar.zst
+    version: null
+    packages: []
+    debug: []
   world:
-    version: 1.2.0-3
+    version: 1.3.0-1
     packages:
-      - hiredis-1.2.0-3-x86_64.pkg.tar.zst
+      - hiredis-1.3.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
