--- a/world/python-xarray/.artixlinux/pkgbase.yaml
+++ b/world/python-xarray/.artixlinux/pkgbase.yaml
@@ -1,55 +1,61 @@
 ---
-pkgbase:
-  name: python-xarray
-  version: 2025.03.1-1
-  arch:
-    - any
-  pkgname:
-    - python-xarray
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
-  triggersNoCheck: false
+  triggersRepoRemove: false
+  triggersNoCheck: true
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
-    version: null
-    packages: []
-  world:
-    version: 2025.03.1-1
+    version: 2025.04.0-1
     packages:
-      - python-xarray-2025.03.1-1-any.pkg.tar.zst
+      - python-xarray-2025.04.0-1-any.pkg.tar.zst
+    debug: []
+  world:
+    version: 2025.04.0-1
+    packages:
+      - python-xarray-2025.04.0-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
