Updated ruby-async-service - 0.13.0-1

--- a/world/ruby-async-service/PKGBUILD
+++ b/world/ruby-async-service/PKGBUILD
@@ -3,8 +3,8 @@
 
 _gemname='async-service'
 pkgname="ruby-${_gemname}"
-pkgver=0.12.0
-pkgrel=3
+pkgver=0.13.0
+pkgrel=1
 pkgdesc='A service layer for Async'
 arch=('any')
 url="https://github.com/socketry/${_gemname}"
@@ -20,14 +20,15 @@ checkdepends=(
   ruby-bake
   ruby-bake-test
   ruby-bake-test-external
-  ruby-covered
   ruby-bundler
+  ruby-covered
+  ruby-decode
   ruby-sus
 )
 options=('!emptydirs')
 source=("${url}/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz")
-sha512sums=('935ff900dbc2acdebd2e884bf2837dd23e1f19c9815d552cbecc0b6e96f2c0454d0d720f1093ba91c3951add63700f9c752b526704853b6a4b8073094d7af726')
-b2sums=('46df02305cc758ee8a6eb62d314319ea049e8b431600be769268e539b21b847ad243b57bb509f0e85a3b8b61af4e48131ec02c7b18ce1631b0ce38c186a36da6')
+sha512sums=('c95838f4bedfb61e13e40e88364feef0a1f632a0461933f8b6035bd52d2825419c6a273d5de450431ef18b2b5d4f6f84b6852ddc32883e15f2184ac16e2bc4e1')
+b2sums=('704a27bd4b519cef74671d9bba220af0a172ea289d2ff190c6661f6f8b75bf73e797cf8f0ac7a85287f9efdc235421324cd59385294e235f88aeace37b7c5561')
 
 prepare() {
   cd "${_gemname}-${pkgver}"
@@ -40,6 +41,7 @@ prepare() {
 
   sed --in-place \
     --expression '/group :maintenance/,/end/d' \
+    --expression '/rubocop/d' \
     gems.rb
 }
 
