--- a/world/podman/.artixlinux/pkgbase.yaml
+++ b/world/podman/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,10 +29,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 5.5.0-2
+    version: 5.5.1-2
     packages:
-      - podman-5.5.0-2-x86_64.pkg.tar.zst
-      - podman-docker-5.5.0-2-x86_64.pkg.tar.zst
+      - podman-5.5.1-2-x86_64.pkg.tar.zst
+      - podman-docker-5.5.1-2-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
