--- a/world/qt6-tools/.artixlinux/pkgbase.yaml
+++ b/world/qt6-tools/.artixlinux/pkgbase.yaml
@@ -21,18 +21,17 @@ repos:
     packages: []
     debug: []
   world-goblins:
-    version: 6.9.1-2
-    packages:
-      - qt6-tools-6.9.1-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world-gremlins:
     version: null
     packages: []
     debug: []
   world:
-    version: 6.9.1-1
+    version: 6.9.1-2
     packages:
-      - qt6-tools-6.9.1-1-x86_64.pkg.tar.zst
+      - qt6-tools-6.9.1-2-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
