--- a/world/qtcreator/.artixlinux/pkgbase.yaml
+++ b/world/qtcreator/.artixlinux/pkgbase.yaml
@@ -21,20 +21,18 @@ repos:
     packages: []
     debug: []
   world-goblins:
-    version: 16.0.2-4
-    packages:
-      - qtcreator-16.0.2-4-x86_64.pkg.tar.zst
-      - qtcreator-devel-16.0.2-4-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world-gremlins:
     version: null
     packages: []
     debug: []
   world:
-    version: 16.0.2-3
+    version: 16.0.2-4
     packages:
-      - qtcreator-16.0.2-3-x86_64.pkg.tar.zst
-      - qtcreator-devel-16.0.2-3-x86_64.pkg.tar.zst
+      - qtcreator-16.0.2-4-x86_64.pkg.tar.zst
+      - qtcreator-devel-16.0.2-4-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
