--- a/world/wasi-compiler-rt/.artixlinux/pkgbase.yaml
+++ b/world/wasi-compiler-rt/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
-  addRepo: world-goblins
-  removeRepo: null
-  triggersBuild: true
+  addRepo: world
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -21,18 +21,17 @@ repos:
     packages: []
     debug: []
   world-goblins:
-    version: 19.1.6-1
-    packages:
-      - wasi-compiler-rt-19.1.6-1-any.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world-gremlins:
     version: null
     packages: []
     debug: []
   world:
-    version: 19.1.6-1
+    version: 20.1.6-1
     packages:
-      - wasi-compiler-rt-19.1.6-1-any.pkg.tar.zst
+      - wasi-compiler-rt-20.1.6-1-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
