--- a/world/wasi-libcplusplus/.artixlinux/pkgbase.yaml
+++ b/world/wasi-libcplusplus/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
-  addRepo: world-goblins
-  removeRepo: null
-  triggersBuild: true
+  addRepo: world
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -21,20 +21,18 @@ repos:
     packages: []
     debug: []
   world-goblins:
-    version: 19.1.6-2
-    packages:
-      - wasi-libc++-19.1.6-2-any.pkg.tar.zst
-      - wasi-libc++abi-19.1.6-2-any.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world-gremlins:
     version: null
     packages: []
     debug: []
   world:
-    version: 19.1.6-2
+    version: 20.1.6-2
     packages:
-      - wasi-libc++-19.1.6-2-any.pkg.tar.zst
-      - wasi-libc++abi-19.1.6-2-any.pkg.tar.zst
+      - wasi-libc++-20.1.6-2-any.pkg.tar.zst
+      - wasi-libc++abi-20.1.6-2-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
