--- a/lib32/lib32-clang/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-clang/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: lib32-clang
-  version: 19.1.7-1
-  arch:
-    - x86_64
-  pkgname:
-    - lib32-clang
 actions:
   addRepo: lib32
   removeRepo: lib32-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
-    version: 19.1.7-1
+    version: 20.1.6-1
     packages:
-      - lib32-clang-19.1.7-1-x86_64.pkg.tar.zst
+      - lib32-clang-20.1.6-1-x86_64.pkg.tar.zst
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: lib32
