--- a/lib32/lib32-llvm/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-llvm/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: lib32-llvm
-  version: 1:19.1.7-2
-  arch:
-    - x86_64
-  pkgname:
-    - lib32-llvm
-    - lib32-llvm-libs
 actions:
   addRepo: lib32
   removeRepo: lib32-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
-    version: 1:19.1.7-2
+    version: 1:20.1.6-1
     packages:
-      - lib32-llvm-1:19.1.7-2-x86_64.pkg.tar.zst
-      - lib32-llvm-libs-1:19.1.7-2-x86_64.pkg.tar.zst
+      - lib32-llvm-1:20.1.6-1-x86_64.pkg.tar.zst
+      - lib32-llvm-libs-1:20.1.6-1-x86_64.pkg.tar.zst
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: lib32
