--- a/lib32/lib32-mesa/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-mesa/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: lib32
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: lib32-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -37,32 +37,22 @@ repos:
     packages: []
     debug: []
   lib32-gremlins:
-    version: 1:25.1.1-3
-    packages:
-      - lib32-mesa-1:25.1.1-3-x86_64.pkg.tar.zst
-      - lib32-opencl-mesa-1:25.1.1-3-x86_64.pkg.tar.zst
-      - lib32-vulkan-dzn-1:25.1.1-3-x86_64.pkg.tar.zst
-      - lib32-vulkan-gfxstream-1:25.1.1-3-x86_64.pkg.tar.zst
-      - lib32-vulkan-intel-1:25.1.1-3-x86_64.pkg.tar.zst
-      - lib32-vulkan-nouveau-1:25.1.1-3-x86_64.pkg.tar.zst
-      - lib32-vulkan-radeon-1:25.1.1-3-x86_64.pkg.tar.zst
-      - lib32-vulkan-swrast-1:25.1.1-3-x86_64.pkg.tar.zst
-      - lib32-vulkan-virtio-1:25.1.1-3-x86_64.pkg.tar.zst
-      - lib32-vulkan-mesa-layers-1:25.1.1-3-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   lib32:
-    version: 1:25.1.2-1
+    version: 1:25.1.3-3
     packages:
-      - lib32-mesa-1:25.1.2-1-x86_64.pkg.tar.zst
-      - lib32-opencl-mesa-1:25.1.2-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-dzn-1:25.1.2-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-gfxstream-1:25.1.2-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-intel-1:25.1.2-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-nouveau-1:25.1.2-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-radeon-1:25.1.2-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-swrast-1:25.1.2-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-virtio-1:25.1.2-1-x86_64.pkg.tar.zst
-      - lib32-vulkan-mesa-layers-1:25.1.2-1-x86_64.pkg.tar.zst
+      - lib32-mesa-1:25.1.3-3-x86_64.pkg.tar.zst
+      - lib32-opencl-mesa-1:25.1.3-3-x86_64.pkg.tar.zst
+      - lib32-vulkan-dzn-1:25.1.3-3-x86_64.pkg.tar.zst
+      - lib32-vulkan-gfxstream-1:25.1.3-3-x86_64.pkg.tar.zst
+      - lib32-vulkan-intel-1:25.1.3-3-x86_64.pkg.tar.zst
+      - lib32-vulkan-nouveau-1:25.1.3-3-x86_64.pkg.tar.zst
+      - lib32-vulkan-radeon-1:25.1.3-3-x86_64.pkg.tar.zst
+      - lib32-vulkan-swrast-1:25.1.3-3-x86_64.pkg.tar.zst
+      - lib32-vulkan-virtio-1:25.1.3-3-x86_64.pkg.tar.zst
+      - lib32-vulkan-mesa-layers-1:25.1.3-3-x86_64.pkg.tar.zst
     debug: []
   galaxy-goblins:
     version: null
