--- a/lib32/lib32-spirv-llvm-translator/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-spirv-llvm-translator/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
-  addRepo: lib32-goblins
-  removeRepo: null
-  triggersBuild: true
+  addRepo: lib32
+  removeRepo: lib32-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,18 +33,17 @@ repos:
     packages: []
     debug: []
   lib32-goblins:
-    version: 19.1.7-1
-    packages:
-      - lib32-spirv-llvm-translator-19.1.7-1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   lib32-gremlins:
     version: null
     packages: []
     debug: []
   lib32:
-    version: 19.1.7-1
+    version: 20.1.3-1
     packages:
-      - lib32-spirv-llvm-translator-19.1.7-1-x86_64.pkg.tar.zst
+      - lib32-spirv-llvm-translator-20.1.3-1-x86_64.pkg.tar.zst
     debug: []
   galaxy-goblins:
     version: null
