--- a/world/ldc/.artixlinux/pkgbase.yaml
+++ b/world/ldc/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: ldc
-  version: 3:1.40.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - ldc
-    - liblphobos
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3:1.40.1-1
+    version: 3:1.40.1-2
     packages:
-      - ldc-3:1.40.1-1-x86_64.pkg.tar.zst
-      - liblphobos-3:1.40.1-1-x86_64.pkg.tar.zst
+      - ldc-3:1.40.1-2-x86_64.pkg.tar.zst
+      - liblphobos-3:1.40.1-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
