--- a/world/llvm/.artixlinux/pkgbase.yaml
+++ b/world/llvm/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: llvm
-  version: 19.1.7-2
-  arch:
-    - x86_64
-  pkgname:
-    - llvm
-    - llvm-libs
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 19.1.7-2
+    version: 20.1.6-3
     packages:
-      - llvm-19.1.7-2-x86_64.pkg.tar.zst
-      - llvm-libs-19.1.7-2-x86_64.pkg.tar.zst
+      - llvm-20.1.6-3-x86_64.pkg.tar.zst
+      - llvm-libs-20.1.6-3-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
