--- a/world/llvm19/.artixlinux/pkgbase.yaml
+++ b/world/llvm19/.artixlinux/pkgbase.yaml
@@ -1,12 +1,12 @@
 ---
 team: world
 actions:
-  addRepo: world-goblins
-  removeRepo: null
-  triggersBuild: true
+  addRepo: world
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -22,18 +22,18 @@ repos:
     packages: []
     debug: []
   world-goblins:
-    version: 19.1.7-1.1
-    packages:
-      - llvm19-19.1.7-1.1-x86_64.pkg.tar.zst
-      - llvm19-libs-19.1.7-1.1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world-gremlins:
     version: null
     packages: []
     debug: []
   world:
-    version: null
-    packages: []
+    version: 19.1.7-1.1
+    packages:
+      - llvm19-19.1.7-1.1-x86_64.pkg.tar.zst
+      - llvm19-libs-19.1.7-1.1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
