--- a/world/postgresql/.artixlinux/pkgbase.yaml
+++ b/world/postgresql/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: postgresql
-  version: 17.4-4
-  arch:
-    - x86_64
-  pkgname:
-    - postgresql
-    - postgresql-libs
-    - postgresql-docs
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 17.4-4
+    version: 17.5-2
     packages:
-      - postgresql-17.4-4-x86_64.pkg.tar.zst
-      - postgresql-libs-17.4-4-x86_64.pkg.tar.zst
-      - postgresql-docs-17.4-4-x86_64.pkg.tar.zst
+      - postgresql-17.5-2-x86_64.pkg.tar.zst
+      - postgresql-libs-17.5-2-x86_64.pkg.tar.zst
+      - postgresql-docs-17.5-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
