--- a/world/pyside6/.artixlinux/pkgbase.yaml
+++ b/world/pyside6/.artixlinux/pkgbase.yaml
@@ -21,22 +21,19 @@ repos:
     packages: []
     debug: []
   world-goblins:
-    version: 6.9.1-2
-    packages:
-      - pyside6-6.9.1-2-x86_64.pkg.tar.zst
-      - pyside6-tools-6.9.1-2-x86_64.pkg.tar.zst
-      - shiboken6-6.9.1-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world-gremlins:
     version: null
     packages: []
     debug: []
   world:
-    version: 6.9.1-1
+    version: 6.9.1-2
     packages:
-      - pyside6-6.9.1-1-x86_64.pkg.tar.zst
-      - pyside6-tools-6.9.1-1-x86_64.pkg.tar.zst
-      - shiboken6-6.9.1-1-x86_64.pkg.tar.zst
+      - pyside6-6.9.1-2-x86_64.pkg.tar.zst
+      - pyside6-tools-6.9.1-2-x86_64.pkg.tar.zst
+      - shiboken6-6.9.1-2-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
